# rticonnextdds-fluent-bit-plugins

./: .gitignore  COPYING  Dockerfile  Makefile.am  README  README.md  TODO.txt  bootstrap.sh  configure.ac
examples/McAfee/: McafeePublisher.rtisdproj  McafeePublisher.xml  README.md  SplunkMalware.xml  isecoasmgr.log00125  mcafee-malware.json  mcafee-parser.conf  mcafee.conf  simulate-loop.sh  simulate-one.sh  start-fluentbit.sh
examples/McAfee/malware_publisher/: McafeePublisher.rtisdproj  McafeePublisher.xml  SplunkMalware.xml  mcafee-malware.json  mcafee-parser.conf  mcafee.conf
examples/McAfee/unstructured_publisher/: USER_QOS_PROFILES.xml  log.txt
examples/catdelay/: catdelay.c
examples/old/: syslog.3
examples/old/out_to_stdout/: mcafee.conf
examples/old/unstructured_publisher/: Fluentbit_MacAfee.rtisdproj  mcafee.conf
src/: Makefile.am  fb.c  fb.h  fb.idl  fbPlugin.c  fbPlugin.h  fbSupport.c  fbSupport.h  out_dds.c
src/common/: fb.c  fb.h  fbSupport.h  fbcommon.c  fbcommon.h
src/dds_unstr/: fbPlugin.c  fbPlugin.h  out_dds_unstr.h
src/out_dds_str/: Makefile.am  out_dds_str.c  out_dds_str.h
src/out_dds_unstr/: Makefile.am  fb.idl  out_dds_unstr.c  out_dds_unstr.h
